--- a/linux/base/科学上网指南.md
+++ b/linux/base/科学上网指南.md
@@ -20,6 +20,11 @@ sudo pip install shadowsocks
     "timeout":600,  
     "method":"aes-256-cfb"  
 }
+## 如果指定多个端口运行
+"port_password":{
+    "port":"password",
+    "port2":"password"
+}
 ```
 
 随后在服务端执行ssserver
@@ -66,9 +71,27 @@ $ cat /etc/init.d/sslocal
 sudo sslocal -c /home/xiaozhi/config/tengxunyun.json -b 0.0.0.0 -d start
 ```
 
+### 在服务端启用bbr
 
+升级centos内核
 
+```shell
+rpm --import https://www.elrepo.org/RPM-GPG-KEY-elrepo.org
+rpm -Uvh http://www.elrepo.org/elrepo-release-7.0-3.el7.elrepo.noarch.rpm
+yum -y --enablerepo=elrepo-kernel install kernel-ml
+grub2-set-default 0
+reboot
+uname -r
+```
 
+在sysctl.conf中添加
+
+```shell
+net.core.default_qdisc = fq
+net.ipv4.tcp_congestion_control = bbr
+```
+
+使用sysctl -p加载配置
 
 ### 使用proxychains代理终端网络请求
 
@@ -143,8 +166,111 @@ file:///home/xiaozhi/config/autoproxy.pac
 
 也可以在系统代理中选择自动代理，同样的设置pac文件的位置，在浏览器代理中选择系统代理
 
-
+除此之外，在github上有前辈维护的gfw列表，可以根据此列表设置switchyomega规则，实现动态代理
 
 ### ss服务器被封禁，使用socat做端口转发
 
 ----
+
+### 使用stunnel建立加密隧道
+
+生成证书
+
+```shell
+openssl req -new -x509 -days 365 -nodes -out stunnel.pem -keyout stunnel.pem
+```
+
+serverconf
+
+```
+key=stunnel.pem
+client=no
+output=stunnel.log
+[23450]
+accept=23550
+connect=127.0.0.1:23450
+```
+
+clientconf
+
+```
+cert=stunnel.pem
+key=stunnel.pem
+client=yes
+output=stunnel.log
+[23450]
+accept=23450
+connect=server:23550
+
+```
+
+genconf
+
+```shell
+arr=$(seq 23550 23565)
+for port in $arr
+do
+    port2=$(expr $port - 100)
+    echo -e "[${port2}]"
+    echo -e "accept=$port"
+    echo -e "connect=127.0.0.1:${port2}"
+done
+```
+
+### ipsec
+
+```
+docker pull hwdsl2/ipsec-vpn-server
+```
+
+vpn.env
+
+```
+VPN_IPSEC_PSK=your_ipsec_pre_shared_key
+VPN_USER=your_vpn_username
+VPN_PASSWORD=your_vpn_password
+```
+
+start container
+
+```shell
+docker run \
+    --name ipsec-vpn-server \
+    --env-file ./vpn.env \
+    --restart=always \
+    -p 500:500/udp \
+    -p 4500:4500/udp \
+    -v /lib/modules:/lib/modules:ro \
+    -d --privileged \
+    hwdsl2/ipsec-vpn-server
+```
+
+scan
+
+```shell
+#!/bin/bash
+
+# Encryption algorithms: 3des=5, aes128=7/128, aes192=7/192, aes256=7/256
+ENCLIST="5 7/128 7/192 7/256"
+# Hash algorithms: md5=1, sha1=2, sha256=5, sha384=6, sha512=7
+HASHLIST="1 2 5 6 7"
+# Diffie-Hellman groups: 1, 2, 5, 14, 15, 19, 20, 21
+GROUPLIST="1 2 5 14 15 19 20 21"
+# Authentication method: Preshared Key=1
+AUTH=1
+
+for ENC in $ENCLIST; do
+   for HASH in $HASHLIST; do
+       for GROUP in $GROUPLIST; do
+          echo ike-scan --trans=$ENC,$HASH,$AUTH,$GROUP -M "$@"
+          ike-scan -s 0 --trans=$ENC,$HASH,$AUTH,$GROUP -M "$@"
+      done
+   done
+done
+
+```
+
+```
+bash scan.sh | grep SA
+```
+
