--- a/python/base/一、基本数据结构.md
+++ b/python/base/一、基本数据结构.md
@@ -2,7 +2,7 @@
 
 
 
-####数字
+#### 数字
 
 1. 包括整型、浮点型、复数（与其他语言重点区分）
 2. 赋值方式和一般变量相同
@@ -25,7 +25,7 @@
    - round()四舍五入
    - 进制转换函数hex() oct()  ord() chr() unichr()
 
-####序列
+#### 序列
 
 1. 序列是一种通用数据结构，比如数组，列表等，有一些操作序列的通用函数，如下
    - in /not in 成员关系操作符判断某元素是否属于某序列
@@ -48,7 +48,12 @@
     - any(seq)如果seq中有一个为True，则返回true
     - all(seq)如果seq中元素都为True，返回True
 
-3. 字符串
+   
+
+   
+
+   ### 字符串
+
    - 字符串的创建与赋值使用‘与“并无差异，可以将字符串当作列表，使用切片操作符得到子串，序列通用函数均可适用于字符串，字符串是不可变对象
    - 在字符串前加字母r表示原生字符串，其中的特殊字符均当作普通字符来看待
    - 在字符串前加字母u表示unicode字符串
@@ -82,13 +87,15 @@
           `'{} is better than {}'.fromat('red','yellow')`
           其中{}标识的位置表示将要放入参数，将format函数参数格式化后放入原字符串中，{}中的内容可以像下面这样
           `[[fill]align][sign][#][0][width][,][.precision][type]`
-           >fill 表示填充字符，默认是空格
-           >align 表示对齐方式 '<' 左对齐 '>' 右对齐 '^'居中
-           >sign 在显示数字时，规定是否显示+ -号，'-'默认取值，正数省略，负数显示'-'号
-           >width显示的宽度
-           >precision显示的精度
-           >type显示的类型
-           >一些示例
+
+          fill 表示填充字符，默认是空格
+
+          align 表示对齐方式 '<' 左对齐 '>' 右对齐 '^'居中
+          sign 在显示数字时，规定是否显示+ -号，'-'默认取值，正数省略，负数显示'-'号
+          width显示的宽度
+          precision显示的精度
+          type显示的类型
+          一些示例
 
           - 通过参数位置访问
             `'{} is better than {}'.format('beautiful', 'ugly')`
