--- a/python/base/五、多进程与多线程.md
+++ b/python/base/五、多进程与多线程.md
@@ -237,72 +237,67 @@
         - 初始化Thread类，传入我们要运行的函数与参数
         - 初始化Thread类，传入可调用对象，比如自定义可调用类
         - 创建类继承Thread，覆盖run函数
+
     - threading模块实例
       直接使用thread类
-      ```
+      ```python
       #!/usr/bin/env python
       import threading
       from time import ctime, sleep
-      ```
-
-
       secLoop = [6, 4]
-      def loop(sec, i):
-          print 'loop', i, 'start at', ctime()
-          sleep(sec)
-          print 'loop', i, 'finished at', ctime()
-
-
-      def main():
-          nloop = range(len(secLoop))
-          threads = []
-          for i in nloop:
-              threads.append(threading.Thread(target=loop, args=(secLoop[i], i)))
-    
-          for i in nloop:
-              threads[i].start()
-    
-          for i in nloop:
-              threads[i].join()
-    
-      if __name__ == '__main__':
-          main()
+        def loop(sec, i):
+            print 'loop', i, 'start at', ctime()
+            sleep(sec)
+            print 'loop', i, 'finished at', ctime()
+       def main():
+            nloop = range(len(secLoop))
+            threads = []
+            for i in nloop:
+                threads.append(threading.Thread(target=loop, args=(secLoop[i], i)))
+      
+            for i in nloop:
+                threads[i].start()
+      
+            for i in nloop:
+                threads[i].join()
+      
+        if __name__ == '__main__':
+            main()
+              
       ```
       自定义可调用类
+
       ```
       import threading
-      from time import ctime, sleep
-
-
-~~~python
-  secLoop = [6, 4]
-  def loop(sec, i):
-      print 'loop', i, 'start at', ctime()
-      sleep(sec)
-      print 'loop', i, 'finished at', ctime()
-
-  class ThreadFunc(object):
-      def __init__(self, func, args):
-          self.func = func
-          self.args = args
-
-      def __call__(self):
-          apply(self.func,self.args)
-
-  def main():
-      nloop = range(len(secLoop))
-      threads = []
-      for i in nloop:
-          threads.append(threading.Thread(target=ThreadFunc(loop,(secLoop[i],i))))
-
-      for i in nloop:
-          threads[i].start()
-
-      for i in nloop:
-          threads[i].join()
-
-  if __name__ == '__main__':
-      main()
-  ```
-~~~
+        from time import ctime, sleep
+          
+        secLoop = [6, 4]
+        def loop(sec, i):
+            print 'loop', i, 'start at', ctime()
+            sleep(sec)
+            print 'loop', i, 'finished at', ctime()
+      
+        class ThreadFunc(object):
+            def __init__(self, func, args):
+                self.func = func
+                self.args = args
+      
+            def __call__(self):
+                apply(self.func,self.args)
+      
+        def main():
+            nloop = range(len(secLoop))
+            threads = []
+            for i in nloop:
+                threads.append(threading.Thread(target=ThreadFunc(loop,(secLoop[i],i))))
+      
+            for i in nloop:
+                threads[i].start()
+      
+            for i in nloop:
+                threads[i].join()
+      
+        if __name__ == '__main__':
+            main()
+      ```
 
